# udemy-ai-agentic-track

./: .gitignore  AGENTS.md  pyproject.toml
1_foundations/: 1_lab1.ipynb
brunoconterato/: .env.example  .gitignore  README.md
brunoconterato/.n8n/: config  database.sqlite  database.sqlite-shm  database.sqlite-wal
brunoconterato/1_foundations/: 2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
brunoconterato/1_foundations/me/: summary.txt
brunoconterato/2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  brief.md  my_deep_research.ipynb
brunoconterato/3_crew/: brief.md
brunoconterato/3_crew/coursework/finantial_researcher_bruno/: .env.bruno_local_ollama  LOCAL_WEB_RESEARCH.md  README.md  pyproject.toml
brunoconterato/3_crew/coursework/finantial_researcher_bruno/output/: report_03 de Julho de 2026.md  report_WEG_03 de Julho de 2026.md  research_03 de Julho de 2026.md  research_WEG_03 de Julho de 2026.md
brunoconterato/3_crew/coursework/finantial_researcher_bruno/src/finantial_researcher_bruno/: crew.py  main.py
brunoconterato/3_crew/coursework/finantial_researcher_bruno/src/finantial_researcher_bruno/config/: agents.yaml  tasks.yaml
brunoconterato/3_crew/coursework/finantial_researcher_bruno/src/finantial_researcher_bruno/tools/: fetch_html_tool.py  search_tool.py
brunoconterato/guides/: 10_intermediate_python.ipynb  11_async_python.ipynb  cpu_tasks.py  local-web-research-stack.md
brunoconterato/lecture notes/: Theory - Week 1 - Day 2.md  Theory - Week 1 - Day 3.md
brunoconterato/script/: run_n8n_docker.sh  run_ollama_docker.sh
(+50 files in other folders)
