[project]
name = "finantial_researcher_bruno"
version = "0.1.0"
description = "finantial_researcher_bruno using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "ollama>=0.6.2",
]

[project.scripts]
finantial_researcher_bruno = "finantial_researcher_bruno.main:run"
run_crew = "finantial_researcher_bruno.main:run"
train = "finantial_researcher_bruno.main:train"
replay = "finantial_researcher_bruno.main:replay"
test = "finantial_researcher_bruno.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
